--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="valcss-main.css" />
   </head>
   <body>
-    <div
-      class="p-[25px] !bg-[#343434]"
-    >
+    <div class="p-[25px] !bg-[#343434]">
       <p class="text-[#000]">Hello</p>
     </div>
   </body>
