Refactor index.html for improved layout, update valcss-main.css to enhance flex utility classes and add media queries, modify cssGenerator.js to support pixel conversion for numeric values, and refine regex in validators.js for better digit validation.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div
-      class="p-[25px] p-[26px] !bg-[#343434] p-[40px_20px] md:!m-[20px_20px_20px] max-lg:hover:!p-[20px_20px_20px] flex-center"
+      class="p-[25px] p-[26px] !bg-[#343434] p-[40px_20px] md:!m-[20px_20px_20px] max-lg:hover:!p-[20px_20px_20px] flex-center hover:flex-center md:flex-center lg:flex-center"
     >
       <p
-        class="text-[#000] bg-[#00ff00] border-[1px_solid_#000] hover:bg-[#0000ff] hover:flex-center"
+        class="text-[#000] bg-[#00ff00] border-[1px_solid_#000] hover:bg-[#0000ff] hover:flex-center m-[2]"
       >
         Hello
       </p>
