chore: update package.json for versioning and build scripts; refactor file paths
refactor: modify config loading to accept fs as a parameter

refactor: update CSS generation functions to accept fs as a parameter

refactor: adjust file resolution to accept fs as a parameter

refactor: modify CSS injection to accept fs as a parameter

style: update valcss-main.css with new timestamp and clean up unused styles

fix: update valcss.js to pass fs to relevant functions and improve injection logic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="valcss-main.css" />
   </head>
   <body>
-    <div
+    <!-- <div
       class="p-[25px] p-[26px] !bg-[#343434] p-[40px_20px] md:!m-[20px_20px_20px] max-lg:hover:!p-[20px_20px_20px] flex-center hover:flex-center md:flex-center lg:flex-center"
     >
       <p
@@ -15,6 +15,7 @@
       >
         Hello
       </p>
-    </div>
+    </div> -->
+    <span class="text-[#000]">helllo</span>
   </body>
 </html>
