--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-  <div
-    class="p-[25px] w-[calc(100%_-_20px)] p-[26px] !bg-[#343434] p-[40px_20px] md:!m-[20px_20px_20px] max-lg:hover:!p-[20px_20px_20px] flex-center hover:flex-center md:flex-center lg:flex-center">
-    <p
-      class="text-[#000] bg-[#00ff00] border-[1px_solid_#000] hover:bg-[#0000ff] hover:flex-center m-[2] !m-[10px] max-md:'w-[calc(100%-50px)]">
-      Hello
-    </p>
-  </div>
+  <section class=" p-[10px] w-[calc(100%_-_10px)]">
+    <div
+      class="p-[25px] w-[calc(100%_-_20px)] p-[26px] !bg-[#343434] p-[40px_20px] md:!m-[20px_20px_20px] max-lg:hover:!p-[20px_20px_20px] flex-center hover:flex-center md:flex-center lg:flex-center">
+      <p
+        class="text-[#000] bg-[#00ff00] border-[1px_solid_#000] hover:bg-[#0000ff] hover:flex-center m-[2] !m-[10px] max-md:'w-[calc(100%-50px)]">
+        Hello
+      </p>
+    </div>
+  </section>
 </body>
 
 </html>
